# anonychating-server

./: Cargo.toml  config.example.toml
src/: config.rs  lib.rs  log.rs  main.rs  publish.rs  teloxide.rs  warp.rs
static/: index.html
static/css/: button.css  container.css  textarea.css
static/js/: send.js  showStatus.js
tests/: test_config.rs
