[package]
name = "anonychating_server"
version = "0.1.0"
authors = ["pan93412 <pan93412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"

teloxide = "0.3.0"
teloxide-macros = "0.3.2"

tokio = { version =  "0.2.11", features = ["full"] }

# for parsing query strings
serde = "1.0.115"

toml = "0.5.6"